Opened 5 years ago
Closed 5 years ago
#15655 closed bug (fixed)
Intel GMA regression
Reported by: | iam-alex | Owned by: | pulkomandy |
---|---|---|---|
Priority: | high | Milestone: | R1/beta2 |
Component: | Drivers/Graphics/intel_extreme/9xx | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Attachments (5)
Change History (14)
by , 5 years ago
Attachment: | kind_of_screenshot_partly_black added |
---|
by , 5 years ago
Attachment: | syslog_does_not_work added |
---|
by , 5 years ago
Attachment: | syslog_works added |
---|
comment:1 by , 5 years ago
Component: | Drivers → Drivers/Graphics/intel_extreme |
---|---|
Owner: | changed from | to
comment:2 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
by , 5 years ago
Attachment: | syslog_hrev53689_works added |
---|
by , 5 years ago
Attachment: | syslog_hrev53692_does_not_work added |
---|
comment:3 by , 5 years ago
comment:5 by , 5 years ago
Is it fixed by hrev53772? And if not, I think the output of "ie_pipe 0" and "ie_pipe 1" (newly added KDL commands) would help me debug this.
comment:6 by , 5 years ago
Unfortunally, no..
Output of ie_pipe 0:
intel_extreme pipe configuration: HTOTAL start 799 end 639 HBLANK start 791 end 647 HSYNC start 751 end 655 VTOTAL start 524 end 479 VBLANK start 516 end 487 VSYNC start 491 end 489 SIZE 639x479 intel_extreme display plane configuration: CONTROL: 18000000 BASE: 10000 BYTES_PER_ROW: 1000 SURFACE: 0
Output of ie_pipe 1:
intel_extreme pipe configuration: HTOTAL start 1359 end 1023 HBLANK start 1359 end 1023 HSYNC start 1191 end 1079 VTOTAL start 629 end 599 VBLANK start 629 end 599 VSYNC start 603 end 600 SIZE 1023x599 intel_extreme display plane configuration: CONTROL: 99000000 BASE: 10000 BYTES_PER_ROW: 1000 SURFACE: 0
Hope there is no mistypes here.
comment:7 by , 5 years ago
can you try this:
ie_reg 0x70190 0x025703FF ie_reg 0x71190 0x025703FF
or this:
ie_reg 0x70190 0x03FF0257 ie_reg 0x71190 0x03FF0257
Does any of these 4 commands fix your problem?
comment:8 by , 5 years ago
First pair fix problem (after playing with resolution settings) and gives this output:
intel_extreme register 0x70190 old value: 0x0 (0) new value: 0x25703ff (39257087)
intel_extreme register 0x71190 old value: 0x257031f (39256863) new value: 0x25703ff (39257087)
And it goes crazy if I use second pair of commands.
Actually, only ie_reg 0x71190 0x025703FF
needed for fix (tested with restart after each command)
comment:9 by , 5 years ago
Component: | Drivers/Graphics/intel_extreme → Drivers/Graphics/intel_extreme/9xx |
---|---|
Milestone: | Unscheduled → R1/beta2 |
Resolution: | → fixed |
Status: | assigned → closed |
Fixed in hrev53787.
Note:
See TracTickets
for help on using tickets.
There were several commits to the intel_extreme driver in that range:
It would be very helpful if you could try some other revisions in that range and try to reduce the interval, so I know which if these changes to focus on. Unfortunately I don't have hardware this old that I can easily use for testing myself, so it's a bit difficult to see and fix regressions there, but I'll do my best.